# mobile_robotics_slam

./: .gitignore  CMakeLists.txt  README.md  package.xml  prova.py  prova.txt  scan1.txt  setup.cfg  setup.py
example_scans/: CliqueScan1.txt  CliqueScan2.txt  SimulationReflectorTrueMap.txt  falko_keypoints.txt  intensity_scan.txt  landmarks_test.txt  my_keypoints.txt  oc_keypoints.txt  reference_scan.txt  scan2.txt
frames/: frames.txt
mobile_robotics_slam/: Keypoint.py
mobile_robotics_slam/GraphHandler/: GTSAMGraphHandler.py  GraphHandler.py  g2oGraphHandler.py
mobile_robotics_slam/ICP/: ICP_Open3d.py  ICP_SVD.py
mobile_robotics_slam/MapGenerator/: MapGIFGenerator.py  MapSaver.py  OnlineMap.py  ProbabilisticOccupancyGrid.py
mobile_robotics_slam/MotionCompensation/: MotionCompensation.py  motion_compensation.py
mobile_robotics_slam/Optimizer/: GTSAMGraphOptimizer.py  g2oGraphOptimizer.py
mobile_robotics_slam/Params/: real_params.py  simulation_params.py
mobile_robotics_slam/RosNodes/: corner_extractor_node.py  corner_extractor_node_ros1  corner_extractor_node_ros1.py  graph_slam_node.py  graph_slam_node_Real_Reflector.py  graph_slam_node_ros1.py  reflector_extractor_node.py  slam_node.py
mobile_robotics_slam/examples/: CornerExtractorUsageExample.py  GraphOptimizerUsageExample.py  MaximumCliqueMatchingExample.py  ReflectorExtractorUsageExample.py  SegmentDetectorUsageExample.py  SegmentHandlerUsageExample.py
mobile_robotics_slam/tests/: AbsoluteTrajectoryError.py  ReferenceScanSaver.py  SimilarScanGenerator.py  TrajectoryComparison.py  check_reflector_error.py  test_covariance_eigenvalues.py
trajectory_data/: landmarks.txt  odom_trajectory.txt  robot_optimized.txt
trajectory_data/Test1/: icp_trajectory.txt  odom_trajectory.txt  robot_optimized.txt
trajectory_data/Test10/: icp_trajectory.txt  landmarks.txt
trajectory_data/Test11/: odom_trajectory.txt  robot_optimized.txt
trajectory_data/Test2/: icp_trajectory.txt  odom_trajectory.txt  robot_optimized.txt
trajectory_data_dingo/: AbsoluteTrajectoryError.py  landmarks.txt  real_trajectory.txt
(+29 files in other folders)
