<?xml version="1.0"?>
<package format="2">
  <name>mobile_robotics_slam</name>
  <version>0.0.0</version>
  <description>The mobile_robotics_slam package</description>

  <maintainer email="nicola.francesconi@sacmigroup.com">lanzo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>
  <depend>networkx</depend>
  <depend>numpy</depend>
  <depend>matplotlib</depend>
  <depend>scipy</depend>
  <depend>sklearn</depend>
  <depend>itertools</depend>
  <depend>multiprocessing</depend>
  <depend>gtsam</depend>
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
